[package]
authors = ["pleme-io"]
description = "lava-functions — typed pure transformations for the lava + tatara-lisp ecosystem. Functions usable inside (deflava-architecture …) templates and via Lisp call sites. cidr-add / cidr-subnet / hostname-join / hash-blake3 / format-tags / lower / upper / kebab / pascal / etc. Each function is a typed Rust impl + a (deflava-function …) catalog entry; signature mismatches (arg arity / type) surface as typed errors before evaluation."
edition = "2024"
license = "MIT"
name = "lava-functions"
readme = "README.md"
repository = "https://github.com/pleme-io/lava-functions"
version = "0.1.0"

[lib]
name = "lava_functions"
path = "src/lib.rs"

[lints.clippy]
pedantic = "warn"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
thiserror = "2"
blake3 = "1"
